--- a/PSS/Pages/Starred.razor
+++ b/PSS/Pages/Starred.razor
@@ -1,6 +1,5 @@
 @page "/starred"
 @inject NavigationManager navigationManager;
-@using static PSS.Backend.Connection
 
 <title>Starred</title>
 <link href="css/IndexAndStarred.css" rel="stylesheet"/>
@@ -31,12 +30,12 @@
     else
     {
         <div id="mainDiv">
-            @foreach (MediaRow media in starredList)
+            @foreach (C.MediaRow media in starredList)
             {
                 <div class="thumbnail">
                     @if (media.starred) {<span class="material-icons-outlined star-icon">star</span>}
                     <span @onclick="@(() => ToggleCheck(media.path))" id="@media.path" class="material-icons checkbox unchecked">check_circle</span>
-                    <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@PSS.Settings.requestPath/@media.path" alt="@PSS.Settings.requestPath/@media.path" loading="lazy"/>
+                    <img @onclick="@(() => ImgClicked(media.uuid.ToString(), media.path))" src="@S.requestPath/@media.path" alt="@S.requestPath/@media.path" loading="lazy"/>
                 </div>
             }
         </div>
@@ -46,7 +45,7 @@
 @code {
     private static string headerVis;
     private static string albumsVis;
-    private static List<MediaRow> starredList;
+    private static List<C.MediaRow> starredList;
     private static List<string> selectedItems; //Stores all items (paths) user selected. If unchecked, removed from list.
 
     private static string choiceVis;
@@ -62,15 +61,15 @@
     
     private async void UpdateStars(bool starred)
     {
-        UpdateStarred(selectedItems, starred);
+        C.UpdateStarred(selectedItems, starred);
         await ClearChecks();
-        starredList = LoadStarred();
+        starredList = C.LoadStarred();
         StateHasChanged();
     }
     
     protected override void OnInitialized()
     {
-        starredList = LoadStarred();
+        starredList = C.LoadStarred();
         selectedItems = new List<string>(); //Reset on page load/refresh
         headerVis = "hidden";
         albumsVis = "hidden";
@@ -152,7 +151,7 @@
     //Show choice div
     private void DeleteBtnClick()
     {
-        if (PSS.Settings.showPrompts == false)
+        if (S.showPrompts == false)
         {
             DeleteSelected();
             return;
@@ -165,11 +164,11 @@
     {
         foreach (string path in selectedItems.ToList()) //https://stackoverflow.com/a/604843
         {
-            MoveToTrash(path);
+            C.MoveToTrash(path);
             headerVis = "hidden";
         }
         await ClearChecks();
-        starredList = LoadStarred();
+        starredList = C.LoadStarred();
         StateHasChanged();
     }
 
