--- a/PSS/Pages/Settings.razor
+++ b/PSS/Pages/Settings.razor
@@ -1,9 +1,4 @@
 @page "/settings"
-@using System.IO
-@using Npgsql
-@using PSS.Backend
-@using C = Backend.Connection;
-@using M = Backend.Maintenance;
 
 <title>Settings</title>
 <link href="css/Settings.css" rel="stylesheet"/>
@@ -90,9 +85,9 @@
         {
             <span>@mediaRowCount Items in Library</span>
             <span>@albumsCount Albums</span>
-            <span>Library Drive Total Size (Usable): @Functions.FormatBytes(totalUsableDriveSize)</span>
-            <span>Library Drive Free Space: @Functions.FormatBytes(freeDriveSpace)</span>
-            <span>Library Size: @Functions.FormatBytes(librarySize)</span>
+            <span>Library Drive Total Size (Usable): @F.FormatBytes(totalUsableDriveSize)</span>
+            <span>Library Drive Free Space: @F.FormatBytes(freeDriveSpace)</span>
+            <span>Library Size: @F.FormatBytes(librarySize)</span>
             string url = $"/view/{oldestItem.uuid}";
             <span><a target="_blank" rel="noopener noreferrer" href="@url">Oldest Item in Library, Taken on @oldestItem.dateTaken</a></span> <!-- https://stackoverflow.com/questions/50709625/link-with-target-blank-and-rel-noopener-noreferrer-still-vulnerable -->
             url = $"/view/{newestItem.uuid}";
@@ -113,13 +108,13 @@
 
 @code {
     //Settings
-    private static string username = PSS.Settings.username;
-    private static string serverIP = PSS.Settings.serverIP;
-    private static string scpFlags = PSS.Settings.scpFlags;
-    private static string uploadRootPath = PSS.Settings.uploadRootPath;
-    private static string libraryRootPath = PSS.Settings.libFolderFullPath;
-    private static bool showPrompts = PSS.Settings.showPrompts;
-    private static string backupFolderPath = PSS.Settings.backupFolderPath;
+    private static string username = S.username;
+    private static string serverIP = S.serverIP;
+    private static string scpFlags = S.scpFlags;
+    private static string uploadRootPath = S.uploadRootPath;
+    private static string libraryRootPath = S.libFolderFullPath;
+    private static bool showPrompts = S.showPrompts;
+    private static string backupFolderPath = S.backupFolderPath;
     
     //Maintenance
     private static bool maintenanceLoaded;
@@ -143,7 +138,7 @@
     private static long totalUsableDriveSize; //How much space the drive pss_library is on could have. E.g., on a 1 TB drive it returns ~930 GB. The rest is probably reserved for the OS.
     private static long freeDriveSpace; //Bytes
     private static long librarySize; //Bytes
-    private static Connection.MediaRow oldestItem, newestItem;
+    private static C.MediaRow oldestItem, newestItem;
     public static DateTime whenWentOnline; //When did the server go online?
     
     //Debug
@@ -152,7 +147,7 @@
     protected override void OnInitialized()
     {
         maintenanceLoaded = false;
-        string datePath = Path.Combine(PSS.Settings.backupFolderPath, "Backed up on.txt");
+        string datePath = Path.Combine(S.backupFolderPath, "Backed up on.txt");
         lastBackedUp = File.Exists(datePath) ? DateTime.Parse(File.ReadAllText(datePath)).ToString("MMM d, yyyy h:mm:ss tt") : "Never";
         
         //Items in lib folder but not DB.
@@ -165,9 +160,9 @@
         album_entries_trash_missing = new List<string>();
 
         //Empty folders
-        folderPaths = Directory.GetDirectories(PSS.Settings.libFolderFullPath, "*", SearchOption.AllDirectories).Concat(Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
+        folderPaths = Directory.GetDirectories(S.libFolderFullPath, "*", SearchOption.AllDirectories).Concat(Directory.GetDirectories(S.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
         foreach (string path in folderPaths)
-            if (Backend.Maintenance.IsFolderEmpty(path) && !emptyFolders.Contains(path)) emptyFolders.Add(path);
+            if (M.IsFolderEmpty(path) && !emptyFolders.Contains(path)) emptyFolders.Add(path);
         
         //Stats
         statsLoaded = false;
@@ -177,36 +172,36 @@
         freeDriveSpace = 0;
         librarySize = 0;
 
-        oldestItem = new Connection.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
-        newestItem = new Connection.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
+        oldestItem = new C.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
+        newestItem = new C.MediaRow("", DateTime.Now, DateTime.Now, false, Guid.Empty);
     }
 
     private static void ApplyBtnClicked()
     {
-        PSS.Settings.username = username;
-        PSS.Settings.serverIP = serverIP;
-        PSS.Settings.scpFlags = scpFlags;
-        PSS.Settings.uploadRootPath = uploadRootPath;
-        PSS.Settings.libFolderFullPath = libraryRootPath;
-        PSS.Settings.showPrompts = showPrompts;
-        PSS.Settings.backupFolderPath = backupFolderPath;
-        PSS.Settings.WriteSettings();
+        S.username = username;
+        S.serverIP = serverIP;
+        S.scpFlags = scpFlags;
+        S.uploadRootPath = uploadRootPath;
+        S.libFolderFullPath = libraryRootPath;
+        S.showPrompts = showPrompts;
+        S.backupFolderPath = backupFolderPath;
+        S.WriteSettings();
     }
 
     private static void CancelBtnClicked()
     {
-        username = PSS.Settings.username;
-        serverIP = PSS.Settings.serverIP;
-        scpFlags = PSS.Settings.scpFlags;
-        uploadRootPath = PSS.Settings.uploadRootPath;
-        libraryRootPath = PSS.Settings.libFolderFullPath;
-        showPrompts = PSS.Settings.showPrompts;
-        backupFolderPath = PSS.Settings.backupFolderPath;
+        username = S.username;
+        serverIP = S.serverIP;
+        scpFlags = S.scpFlags;
+        uploadRootPath = S.uploadRootPath;
+        libraryRootPath = S.libFolderFullPath;
+        showPrompts = S.showPrompts;
+        backupFolderPath = S.backupFolderPath;
     }
 
     private static void ResetBtnClicked()
     {
-        PSS.Settings.ResetSettings();
+        S.ResetSettings();
         CancelBtnClicked();
     }
 
@@ -221,7 +216,7 @@
     private static void RunMaintenanceCheck()
     {
         maintenanceLoaded = true;
-        untrackedPaths = Backend.Maintenance.GetUntrackedLibFiles();
+        untrackedPaths = M.GetUntrackedLibFiles();
 
         media_missing = M.GetMissingFiles(M.MissingFilesTable.media);
         media_trash_missing = M.GetMissingFiles(M.MissingFilesTable.media_trash);
@@ -229,9 +224,9 @@
         album_entries_trash_missing = M.GetMissingFiles(M.MissingFilesTable.album_entries_trash);
         media_missing = media_missing.Concat(media_trash_missing).Concat(album_entries_missing).Concat(album_entries_trash_missing).ToList();
 
-        folderPaths = Directory.GetDirectories(PSS.Settings.libFolderFullPath, "*", SearchOption.AllDirectories).Concat(Directory.GetDirectories(PSS.Settings.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
+        folderPaths = Directory.GetDirectories(S.libFolderFullPath, "*", SearchOption.AllDirectories).Concat(Directory.GetDirectories(S.uploadRootPath, "*", SearchOption.AllDirectories)).ToArray();
         foreach (string path in folderPaths)
-            if (Backend.Maintenance.IsFolderEmpty(path) && !emptyFolders.Contains(path)) emptyFolders.Add(path);
+            if (M.IsFolderEmpty(path) && !emptyFolders.Contains(path)) emptyFolders.Add(path);
     }
 
     private static void GetStats()
@@ -240,11 +235,11 @@
         mediaRowCount = Stats.CountMediaRows();
         albumsCount = Stats.CountAlbums();
         
-        DriveInfo driveInfo = new(PSS.Settings.libFolderFullPath);
+        DriveInfo driveInfo = new(S.libFolderFullPath);
         totalUsableDriveSize = driveInfo.TotalSize;
         freeDriveSpace = driveInfo.TotalFreeSpace;
         
-        DirectoryInfo dirInfo = new(PSS.Settings.libFolderFullPath);
+        DirectoryInfo dirInfo = new(S.libFolderFullPath);
         librarySize = dirInfo.EnumerateFiles("*", SearchOption.AllDirectories).Sum(file => file.Length);
 
         oldestItem = Stats.FindOldestItem();
@@ -255,8 +250,8 @@
     {
         try
         {
-            Connection.connection.Open();
-            NpgsqlCommand cmd = new(debugQuery, Connection.connection);
+            C.Open();
+            NpgsqlCommand cmd = new(debugQuery, C.connection);
             cmd.ExecuteNonQuery();
         }
         catch (NpgsqlException e)
@@ -265,7 +260,7 @@
         }
         finally
         {
-            Connection.connection.Close();
+            C.Close();
         }
     }
 }
